Add Picture Function

--- a/Sources/Helpers/Info.plist
+++ b/Sources/Helpers/Info.plist
@@ -22,6 +22,8 @@
 	<string>1</string>
 	<key>LSRequiresIPhoneOS</key>
 	<true/>
+	<key>NSPhotoLibraryUsageDescription</key>
+	<string>원활한 기능 이용을 위해 권한을 허용해주세요.</string>
 	<key>UIAppFonts</key>
 	<array>
 		<string>NanumSquareOTFExtraBold.otf</string>
@@ -57,7 +59,7 @@
 		<string>armv7</string>
 	</array>
 	<key>UIRequiresFullScreen</key>
-	<false/>
+	<true/>
 	<key>UIStatusBarHidden</key>
 	<false/>
 	<key>UISupportedInterfaceOrientations</key>
@@ -68,11 +70,9 @@
 	<key>UISupportedInterfaceOrientations~ipad</key>
 	<array>
 		<string>UIInterfaceOrientationPortrait</string>
-		<string>UIInterfaceOrientationPortraitUpsideDown</string>
-		<string>UIInterfaceOrientationLandscapeLeft</string>
 		<string>UIInterfaceOrientationLandscapeRight</string>
 	</array>
-	<key>NSPhotoLibraryUsageDescription</key>
+	<key>NSCameraUsageDescription</key>
 	<string>원활한 기능 이용을 위해 권한을 허용해주세요.</string>
 </dict>
 </plist>
